--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+
+html{
+
+  zoom:80%;
+}
+
 :root {
   --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
@@ -80,6 +86,7 @@ button {
   /*background-size:auto;*/
   left:-10px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
   }
 
 
@@ -132,7 +139,7 @@ button {
 }
 .rectangle-2:hover
 {
- 
+  cursor: pointer;
   left:-10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
@@ -440,7 +447,7 @@ button {
 }
 .rectangle-a:hover
 {
-
+  cursor: pointer;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
@@ -515,7 +522,7 @@ button {
 }
 .rectangle-f:hover
 {
-
+  cursor: pointer;
 box-shadow: 0 0 30px rgba(9, 7, 7, 0.5);
 }
 .projet-brief {
@@ -665,6 +672,7 @@ box-shadow: 0 0 30px rgba(9, 7, 7, 0.5);
 .rectangle-12:hover
 {
 left:-10px;
+cursor: pointer;
 box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 .frame-13 {
@@ -710,6 +718,7 @@ box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 .rectangle-15:hover
 {
 left:-10px;
+cursor: pointer;
 box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
