--- a/index.css
+++ b/index.css
@@ -66,8 +66,9 @@ button {
   background: #ffffff;
   border: 1px solid grey;
   overflow: hidden;
-  border-radius: 25px 0 0 25px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 24px 0 0 24px;
+  /*box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);*/
+  box-shadow: 0 1px 15px 0 grey;
 }
 .flex-row-d {
   position: absolute;
@@ -569,7 +570,8 @@ button {
   z-index: 17;
   overflow: hidden;
   border-radius: 24px 0 0 24px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
+  /*box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);*/
+  box-shadow: 0 1px 15px 0 grey;
 }
 .group-c {
   position: absolute;
@@ -937,7 +939,8 @@ button {
   border-style: solid;
   border-width: 1px;
   border-color: gray;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
+  /*box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);*/
+  box-shadow: 0 1px 15px 0 grey;
   border-radius: 25px 0 0 25px;
 
 }
@@ -1153,8 +1156,9 @@ background: url(./assets/images/de81c4bb-5dd6-416e-8f62-9740c39144e9.png)
   border-style: solid;
   border-width: 1px;
   border-color: gray;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
-  border-radius: 25px 0 0 25px;
+  /*box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);*/
+  box-shadow: 0 1px 15px 0 grey;
+  border-radius: 24px 0 0 24px;
 }
 .project-brief-171 {
   position: absolute;
