--- a/index.css
+++ b/index.css
@@ -1884,11 +1884,15 @@ z-index:18;
 
 .DRSWITCH
 {
-margin-top:20px;
+margin-top:100px;
 margin-left:100px;  
-Width:650px;
-height:320px;
-background-color: rgb(116, 112, 112);
+color:grey;
+font-size: 10px;
+font-family:Arial, Helvetica, sans-serif;
+Width: 340px;
+height:180px;
+background-color:rgb(255, 255, 255);
+/*background-color: rgb(116, 112, 112);*/
 border-color: rgb(110, 107, 107);
 border-width: 1px;
 border-style: solid;
@@ -1903,6 +1907,7 @@ flex-direction: column;
 align-items: center;
 float:left;
 margin-left:20px;
+box-shadow: 0 1px 15px 0 grey;
 
 }
 .Dsw2{
@@ -1910,14 +1915,14 @@ margin-left:20px;
   flex-direction: column;
   align-items: center;
   float:left;
- 
+  box-shadow: 0 1px 15px 0 grey;
 }
 .Dsw3{
   Display :flex;
 flex-direction: column;
 align-items: center;
 float:left;
-
+box-shadow: 0 1px 15px 0 grey;
   }
   .Dsw4{
     Display :flex;
@@ -1925,88 +1930,109 @@ flex-direction: column;
 align-items: center;
 float:left;
 margin-right: 5px;
+box-shadow: 0 1px 15px 0 grey;
   }
   .Dsw5{
     Display :flex;
   flex-direction: column;
   align-items: center;
   float:left;
- 
+  box-shadow: 0 1px 15px 0 grey;
     }
     .Dsw6{
       Display :flex;
   flex-direction: column;
   align-items: center;
   float:left;
-  
+  box-shadow: 0 1px 15px 0 grey;
     } 
 
 
+/*.dl
+{
+  position: absolute;
+  top:300px;
+  Width: 340px;
+  height:70px;
+  color:#fff;
+  background-color: rgb(116, 112, 112);
+  border-color: rgb(110, 107, 107);
+  border-width: 1px;
+  border-style: solid;
+  /*background-color: #e4e6ea;*/
+  /*text-align:center; 
+  box-shadow: 0 1px 15px 0 grey;
+  border-radius: 5px;
+} */
 
-    
     .Dl1{
       Display :flex;
       flex-direction: column;
       align-items: center;
       float:left;
-    margin-left:55px;
-    margin-top:15px;
+    margin-left:25px;
+    margin-top:10px;
+
       }
       .Dl2{
         Display :flex;
         flex-direction: column;
         align-items: center;
         float:left;
-        margin-left:70px;
-        margin-top:15px;
+        margin-left:30px;
+        margin-top:10px;
       }
       .Dl3{
         Display :flex;
       flex-direction: column;
       align-items: center;
       float:left;
-      margin-left:65px;
-      margin-top:15px;
+      margin-left:30px;
+      margin-top:10px;
         }
         .Dl4{
           Display :flex;
       flex-direction: column;
       align-items: center;
       float:left;
-      margin-left:65px;
-      margin-top:15px;
+      margin-left: 25px;
+      margin-top:10px;
         }
         .TV1{
           Display :flex;
       flex-direction: column;
       align-items: center;
       float:left;
-      margin-left:75px;
-      margin-top:15px;
+      margin-left:20px;
+      margin-top:10px;
         }
         .SND{
           Display :flex;
       flex-direction: column;
       align-items: center;
       float:left;
-      margin-left:50px;
+      margin-left:10px;
       margin-top:10px;
         }
 
     .soswitch
   {
-  margin-top:45px;
-  margin-left:100px;  
-  Width:650px;
-  height:320px;
-  background-color: rgb(116, 112, 112);
-  border-color: rgb(110, 107, 107);
-  border-width: 1px;
-  border-style: solid;
-  /*background-color: #e4e6ea;*/
-  text-align:center; 
-  box-shadow: 0 1px 15px 0 grey;
-  border-radius: 15px;
+    margin-top:50px;
+    margin-left:100px;  
+    color:grey;
+    font-size: 10px;
+    font-family:Arial, Helvetica, sans-serif;
+    Width: 340px;
+    height:180px;
+    background-color:white;
+    /*background-color: rgb(116, 112, 112);*/
+    border-color: rgb(110, 107, 107);
+    border-width: 1px;
+    border-style: solid;
+    /*background-color: #e4e6ea;*/
+    text-align:center; 
+    box-shadow: 0 1px 15px 0 grey;
+    border-radius: 15px;
   }
   .sosw1{
   Display :flex;
@@ -2014,6 +2040,7 @@ margin-right: 5px;
   align-items: center;
   float:left;
   margin-left:20px;
+  box-shadow: 0 1px 15px 0 grey;
 
   }
   .sosw2{
@@ -2021,14 +2048,14 @@ margin-right: 5px;
     flex-direction: column;
     align-items: center;
     float:left;
-  
+    box-shadow: 0 1px 15px 0 grey;
   }
   .sosw3{
     Display :flex;
   flex-direction: column;
   align-items: center;
   float:left;
-
+  box-shadow: 0 1px 15px 0 grey;
     }
     .sosw4{
       Display :flex;
@@ -2036,20 +2063,21 @@ margin-right: 5px;
   align-items: center;
   float:left;
   margin-right: 5px;
+  box-shadow: 0 1px 15px 0 grey;
     }
     .sosw5{
       Display :flex;
     flex-direction: column;
     align-items: center;
     float:left;
-  
+    box-shadow: 0 1px 15px 0 grey;
       }
       .sosw6{
         Display :flex;
     flex-direction: column;
     align-items: center;
     float:left;
-    
+    box-shadow: 0 1px 15px 0 grey;
       } 
 
 
@@ -2060,7 +2088,7 @@ margin-right: 5px;
         flex-direction: column;
         align-items: center;
         float:left;
-      margin-left:55px;
+      margin-left:25px;
       margin-top:15px;
         }
         .SOl2{
@@ -2068,7 +2096,7 @@ margin-right: 5px;
           flex-direction: column;
           align-items: center;
           float:left;
-          margin-left:60px;
+          margin-left:25px;
           margin-top:15px;
         }
         .SOl3{
@@ -2076,7 +2104,7 @@ margin-right: 5px;
         flex-direction: column;
         align-items: center;
         float:left;
-        margin-left:60px;
+        margin-left:15px;
         margin-top:15px;
           }
           .SOl4{
@@ -2084,7 +2112,7 @@ margin-right: 5px;
         flex-direction: column;
         align-items: center;
         float:left;
-        margin-left:65px;
+        margin-left:25px;
         margin-top:15px;
           }
           .SOl5{
@@ -2092,7 +2120,7 @@ margin-right: 5px;
         flex-direction: column;
         align-items: center;
         float:left;
-        margin-left:60px;
+        margin-left:20px;
         margin-top:15px;
           }
           .SOl6{
@@ -2100,27 +2128,28 @@ margin-right: 5px;
         flex-direction: column;
         align-items: center;
         float:left;
-        margin-left:65px;
+        margin-left:25px;
         margin-top:15px;
           }
 
           .entrswitch
           {
-          position:absolute;
-          display:block;
-          flex-direction: row;
-          top:20px;
-          margin-left:800px;  
-          Width:450px;
-          height:320px;
-         border-color: rgb(110, 107, 107);
-          border-width: 1px;
-          border-style: solid;
-background-color: rgb(116, 112, 112);
-          /*background-color: #e4e6ea;*/
-          text-align:center; 
-          box-shadow: 0 1px 15px 0 grey;
-          border-radius: 15px;
+            margin-top:50px;
+            margin-left:100px;  
+            color:grey;
+            font-size: 10px;
+            font-family:Arial, Helvetica, sans-serif;
+            Width: 250px;
+            height:180px;
+            background-color:white;
+            /*background-color: rgb(116, 112, 112);*/
+            border-color: rgb(110, 107, 107);
+            border-width: 1px;
+            border-style: solid;
+            /*background-color: #e4e6ea;*/
+            text-align:center; 
+            box-shadow: 0 1px 15px 0 grey;
+            border-radius: 15px;
           }
           .entrsw1{
           Display :flex;
@@ -2128,21 +2157,21 @@ background-color: rgb(116, 112, 112);
           align-items: center;
           float:left;
           margin-left:20px;
-        
+          box-shadow: 0 1px 15px 0 grey;
           }
           .entrsw2{
             Display :flex;
             flex-direction: column;
             align-items: center;
             float:left;
-          
+            box-shadow: 0 1px 15px 0 grey;
           }
           .entrsw3{
             Display :flex;
           flex-direction: column;
           align-items: center;
           float:left;
-        
+          box-shadow: 0 1px 15px 0 grey;
             }
             .entrsw4{
               Display :flex;
@@ -2150,6 +2179,7 @@ background-color: rgb(116, 112, 112);
           align-items: center;
           float:left;
           margin-right: 5px;
+          box-shadow: 0 1px 15px 0 grey;
             }
             .entrsw5{
               Display :flex;
@@ -2157,6 +2187,7 @@ background-color: rgb(116, 112, 112);
             flex-direction: column;
             align-items: center;
             float:left;
+            
           
               }
               .entrsw6{
@@ -2173,32 +2204,32 @@ background-color: rgb(116, 112, 112);
                 flex-direction: column;
                 align-items: center;
                 float:left;
-              margin-left:35px;
-              margin-top:15px;
+              margin-left:25px;
+              margin-top:10px;
                 }
                 .entrl2{
                   Display :flex;
                   flex-direction: column;
                   align-items: center;
                   float:left;
-                  margin-left:10px;
-                  margin-top:15px;
+                  margin-left:25px;
+                  margin-top:10px;
                 }
                 .entrl3{
                   Display :flex;
                 flex-direction: column;
                 align-items: center;
                 float:left;
-                margin-left:25px;
-                margin-top:15px;
+                margin-left:15px;
+                margin-top:10px;
                   }
                   .entrl4{
                     Display :flex;
                 flex-direction: column;
                 align-items: center;
                 float:left;
-                margin-left:35px;
-                margin-top:15px;
+                margin-left:20px;
+                margin-top:10px;
                   }
  
 
